# snes_controllers_to_usb

./: LICENSE  README.md  RPi_Pico.kicad_sym  snes_controllers_to_usb.kicad_pcb  snes_controllers_to_usb.kicad_pro  snes_controllers_to_usb.kicad_sch  sym-lib-table
RPi_Pico.pretty/: RPi_PicoW_SMD_TH.kicad_mod
firmware/: .gitignore  CMakeLists.txt  LICENSE  README.md  cppcheck.cppcheck  gpico_import.cmake
firmware/include/: FreeRTOSConfig.h  cdc.h  cli_task.h  controller.h  log.h  lwipopts.h  network_task.h  pio_controller.h  pio_controllers.h  server.h  syslog.h  tusb_config.h  usb.h  watchdog.h  wifi_management_task.h
firmware/include/sctu/: cdc_device.h  cli_task.h  io_device.h  log.h  pio_controllers.h  syslog.h  usb.h
firmware/src/: FreeRTOS_support.cpp  cdc_device.cpp  cli_task.cpp  controllers.pio  log.cpp  main.cpp  network_task.cpp  server.cpp  syscalls.cpp  usb_descriptors.c  usb_descriptors.cpp  watchdog.cpp  wifi_management_task.cpp
pcb/: snes_controller_to_usb-B_Cu.gbl  snes_controller_to_usb-B_Mask.gbs  snes_controller_to_usb-B_Paste.gbp  snes_controller_to_usb-B_Silkscreen.gbo  snes_controller_to_usb-Edge_Cuts.gm1  snes_controller_to_usb-F_Cu.gtl  snes_controller_to_usb-F_Mask.gts  snes_controller_to_usb-F_Paste.gtp  snes_controller_to_usb-F_Silkscreen.gto  snes_controller_to_usb-NPTH-drl_map.gbr  snes_controller_to_usb-NPTH.drl  snes_controller_to_usb-PTH-drl_map.gbr  snes_controller_to_usb-PTH.drl
